<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediatech">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="reply_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_doc">Пользовательское соглашение</string>
    <string name="search_hint">Поиск</string>
    <string name="link_reply">https://practicum.yandex.ru/</string>
    <string name="support_mail">onlyauren@yandex.ru</string>
    <string name="support_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="app_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_not_found">Ничего не нашлось</string>
    <string name="search_server_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_not_loaded">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="youSerched">Вы искали</string>
    <string name="player_attributes_length">Длительность</string>
    <string name="player_attributes_album">Альбом</string>
    <string name="player_attributes_year">Год</string>
    <string name="player_attributes_genre">Жанр</string>
    <string name="player_attributes_country">Страна</string>
    <string name="player_current_time_zero">00:00</string>
</resources>