<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding16"
    android:paddingEnd="@dimen/padding16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/head_margin_top_image"
        android:layout_marginStart="16dp"
        android:background="@color/settings_background">

        <ImageView
            android:id="@+id/btnBack"
            style="@style/HeadsImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/settings_background" />

        <TextView
            style="@style/HeadsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/head_text"
            android:layout_marginStart="@dimen/head_margin_title"
            android:background="@color/settings_background"
            android:text="@string/settings" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin61"
        android:background="@color/settings_background">

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/SettingsStyle"
            android:id="@+id/themeSwitcher"
            android:text="@string/dark_theme"
            android:textSize="16sp"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <TextView
        android:id="@+id/btn_reply"
        style="@style/SettingsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/reply_app"
        app:drawableEndCompat="@drawable/ic_reply" />

    <TextView
        android:id="@+id/btn_support"
        style="@style/SettingsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin42"
        android:text="@string/write_to_support"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/btn_forward"
        style="@style/SettingsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin42"
        android:text="@string/user_doc"
        app:drawableEndCompat="@drawable/ic_forward" />

</LinearLayout>