<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_main"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding14"
    android:paddingBottom="@dimen/padding22"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="@dimen/margin16"
        android:text="@string/playlist_maker"
        android:textColor="@color/white_main"
        android:textSize="@dimen/text22" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin17"
        android:layout_marginTop="@dimen/margin34"
        android:layout_marginEnd="@dimen/margin15"
        android:layout_weight="1"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/black_app"
        android:textSize="@dimen/text22"
        app:backgroundTint="@color/white_main"
        app:cornerRadius="@dimen/radius16"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconTint="@color/black_app" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin17"
        android:layout_marginTop="@dimen/margin3"
        android:layout_marginEnd="@dimen/margin15"
        android:layout_weight="1"
        android:text="@string/mediatech"
        android:textAllCaps="false"
        android:textColor="@color/black_app"
        android:textSize="@dimen/text22"
        app:backgroundTint="@color/white_main"
        app:cornerRadius="@dimen/radius16"
        app:icon="@drawable/ic_media"
        app:iconGravity="textStart"
        app:iconTint="@color/black_app" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin17"
        android:layout_marginTop="@dimen/margin3"
        android:layout_marginEnd="@dimen/margin15"
        android:layout_weight="1"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/black_app"
        android:textSize="@dimen/text22"
        app:backgroundTint="@color/white_main"
        app:cornerRadius="@dimen/radius16"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconTint="@color/black_app" />
</LinearLayout>