<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_background"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/head_margin_top_image"
        android:layout_marginStart="16dp"
        android:background="@color/search_background">

        <ImageView
            style="@style/HeadsImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/search_background" />

        <TextView
            style="@style/HeadsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/head_text"
            android:layout_marginStart="@dimen/head_margin_title"
            android:background="@color/search_background"
            android:text="@string/search" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        app:cardBackgroundColor="@color/search_background_searchline"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="13dp"
                android:src="@drawable/ic_searchline" />

            <EditText
                android:id="@+id/inputSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_weight="1"
                android:backgroundTint="@color/search_background_searchline"
                android:fontFamily="@font/ys_display_regular"
                android:hint="@string/search_hint"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:singleLine = "true"
                android:textColor="@color/search_text_searchline"
                android:textColorHint="@color/search_hint_text_searchline" />

            <ImageView
                android:id="@+id/clearTextSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_clear"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackList"
        android:layout_marginStart="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        tools:visibility="gone">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/placeholderMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">
        <ImageView
            android:id="@+id/placeholderMessageImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_not_found"/>
        <TextView
            android:id="@+id/placeholderMessageText"
            style="@style/SearchTextErrors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/placeholder_margin24"
            android:textSize="19sp"
            android:layout_marginTop="@dimen/margin16"
            android:visibility="visible"
            tools:text="@string/search_server_error"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/placeholderMessageButtonRefresh"
            style="@style/SearchButtonErrors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="54dp"
            android:textSize="14sp"
            android:layout_marginTop="@dimen/placeholder_margin24"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/historySearched"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:visibility="gone">

        <TextView
            style="@style/YouSearched"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/youSerched"
            android:gravity="center_horizontal"
            android:textSize="19sp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/historyClearTracks"
            style="@style/SearchButtonErrors"
            android:text="@string/clearHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cornerRadius="54dp"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyTrackList"
            android:layout_marginStart="13dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" />

    </LinearLayout>



</LinearLayout>